# mini-crm-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20251117_0001_init.py
app/: cli.py  main.py
app/api/dependencies/: auth.py
app/api/routes/: activities.py  analytics.py  auth.py  contacts.py  deals.py  organizations.py  tasks.py
app/api/v1/: router.py
app/core/: cache.py  config.py  security.py
app/db/: base.py  init_db.py  session.py
app/dependencies/: repositories.py  services.py
app/models/: __init__.py  activity.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
app/repositories/: activity.py  base.py  contact.py  deal.py  organization.py  organization_member.py  task.py  user.py
app/schemas/: activity.py  analytics.py  auth.py  common.py  contact.py  deal.py  organization.py  task.py  user.py
app/services/: activities.py  analytics.py  auth.py  contacts.py  deals.py  exceptions.py  organizations.py  tasks.py
docker/: entrypoint.sh
mini_crm_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_deals.py  test_full_flow.py
