[project]
name = "mini-crm-api"
version = "0.1.0"
description = "Мульти-арендная мини-CRM на FastAPI."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Test Candidate" }
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.3",
    "SQLAlchemy>=2.0.21",
    "asyncpg>=0.29.0",
    "alembic>=1.12.0",
    "python-jose>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0",
    "email-validator>=2.1.0",
    "python-multipart>=0.0.7",
    "redis>=5.0.1",
    "orjson>=3.9.15",
    "fastapi-pagination>=0.12.12",
    "typer>=0.9.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.6.1",
    "ruff>=0.1.7",
    "types-python-jose",
    "types-passlib",
    "faker>=19.0.0",
    "aiosqlite>=0.19.0"
]

[project.scripts]
mini-crm = "app.cli:app"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B", "N", "Q", "S", "C4"]
ignore = ["E203", "B008"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --disable-warnings"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]


